align port